# MindMap-India

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  check_env.py  config.py  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_analysis.bat  run_analysis.py  setup.cfg  setup.py  setup_dev.py
app/: __init__.py  app.py  cluster_utils.py
app/assets/: style.css
data/: careers.csv
docs/source/: api.rst  conf.py  contributing.rst  developer_guide.rst  getting_started.rst  index.rst  user_guide.rst
mindmap/: __init__.py  app.py  cli.py  clustering.py  visualization.py
notebooks/: career_analysis.ipynb  career_analysis_fixed.ipynb  clustering_new.py  requirements.txt
scripts/: career_clustering.py  career_clustering_fixed.py  check_data.py  fix_clustering.py  test_script.py  view_visualization.py
tests/: __init__.py  conftest.py  test_clustering.py
