[metadata]
description-file = README.md
license_files = LICENSE

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503
exclude = 
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache,
    build,
    dist,
    docs,
    *.egg-info,
    .eggs,
    .venv,
    venv,
    env,
    .ipynb_checkpoints

[isort]
profile = black
line_length = 88
skip = .venv, venv, env, build, dist
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
show_error_context = True
show_column_numbers = True

[coverage:run]
source = mindmap
omit = 
    */tests/*
    */__init__.py
    */version.py

[coverage:report]
show_missing = True
skip_covered = True
fail_under = 80

testpaths = tests
python_files = test_*.py
addopts = -v -s --cov=mindmap --cov-report=term-missing --cov-report=html
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning
    ignore::FutureWarning
